Continuing preparing the synchronized vertices
git-svn-id: http://svn.code.sf.net/p/preesm/code/trunk@1019 c7aee7ca-e32f-b942-b52e-c1c222c4573e